--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
                             <i class="bi bi-person-circle"></i>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
-                            <li><a class="dropdown-item" href="#">Đăng nhập</a></li>
-                            <li><a class="dropdown-item" href="#">Đăng ký</a></li>
+                            <li><a class="dropdown-item" href="/pages/login/login.html">Đăng nhập</a></li>
+                            <li><a class="dropdown-item" href="/pages/login/register.html">Đăng ký</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
