--- a/pages/login/forgot-password.html
+++ b/pages/login/forgot-password.html
@@ -7,9 +7,9 @@
 
     <link rel="icon" href="../../assets/images/logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../assets/css/custom.css">
-    <link rel="stylesheet" href="../../assets/css/login.css">
+    <link rel="stylesheet" href="/assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/custom.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 <body>
 <header>
@@ -114,19 +114,21 @@
     </nav>
 </section>
 
-<div class="login-container">
-    <h3>Quên mật khẩu</h3>
-    <p>Hãy nhập số điện thoại/email của bạn vào bên dưới để bắt đầu quá trình khôi phục mật khẩu.</p>
-    <form>
-        <div class="field">
-            <input type="text" id="user-email" placeholder="Nhập email khôi phục mật khẩu">
-            <label for="user-email">Email</label>
-        </div>
+<div class="container my-5">
+    <div class="login-container">
+        <h3>Quên mật khẩu</h3>
+        <p>Hãy nhập số điện thoại/email của bạn vào bên dưới để bắt đầu quá trình khôi phục mật khẩu.</p>
+        <form>
+            <div class="field">
+                <input type="text" id="user-email" placeholder="Nhập email khôi phục mật khẩu">
+                <label for="user-email">Email</label>
+            </div>
 
-        <button type="submit" class="btn-login" id="forgot-password-btn">Khôi phục mật khẩu</button>
-    </form>
-    <div class="footer-links">
-        <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
+            <button type="submit" class="btn-login" id="forgot-password-btn">Khôi phục mật khẩu</button>
+        </form>
+        <div class="footer-links">
+            <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
+        </div>
     </div>
 </div>
 
