--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
 
-    <link rel="icon" href="../../assets/images/logo.png" type="image/png">
+    <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../assets/css/custom.css">
-    <link rel="stylesheet" href="../../assets/css/login.css">
+    <link rel="stylesheet" href="/assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/custom.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 <body>
 <header>
@@ -114,37 +114,39 @@
     </nav>
 </section>
 
-<div class="login-container">
-    <h3>Đăng nhập với</h3>
-    <div class="social-buttons">
-        <button class="btn-social">
-            <img src="../../assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
-            &nbsp;Google
-        </button>
-        <button class="btn-social">
-            <img src="../../assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
-            &nbsp;Zalo
-        </button>
-    </div>
-    <div class="divider">hoặc</div>
-    <form>
-        <div class="field">
-            <input type="text" id="user-number" placeholder="Nhập số điện thoại">
-            <label for="user-number">Số điện thoại</label>
+<div class="container my-5">
+    <div class="login-container">
+        <h3>Đăng nhập với</h3>
+        <div class="social-buttons">
+            <button class="btn-social">
+                <img src="../../assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
+                &nbsp;Google
+            </button>
+            <button class="btn-social">
+                <img src="../../assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
+                &nbsp;Zalo
+            </button>
         </div>
+        <div class="divider">hoặc</div>
+        <form>
+            <div class="field">
+                <input type="text" id="user-number" placeholder="Nhập số điện thoại">
+                <label for="user-number">Số điện thoại</label>
+            </div>
 
-        <div class="field">
-            <input type="password" id="user-password" placeholder="Nhập mật khẩu">
-            <label for="user-password">Mật khẩu</label>
-        </div>
+            <div class="field">
+                <input type="password" id="user-password" placeholder="Nhập mật khẩu">
+                <label for="user-password">Mật khẩu</label>
+            </div>
 
-        <div style="text-align: right; margin-bottom: 15px;">
-            <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
+            <div style="text-align: right; margin-bottom: 15px;">
+                <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
+            </div>
+            <button type="submit" class="btn-login" id="login-btn">Đăng nhập</button>
+        </form>
+        <div class="footer-links">
+            <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
         </div>
-        <button type="submit" class="btn-login" id="login-btn">Đăng nhập</button>
-    </form>
-    <div class="footer-links">
-        <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
     </div>
 </div>
 
