--- a/pages/login/register.html
+++ b/pages/login/register.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
 
-    <link rel="icon" href="../../assets/images/logo.png" type="image/png">
+    <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../assets/css/custom.css">
-    <link rel="stylesheet" href="../../assets/css/login.css">
+    <link rel="stylesheet" href="/assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/custom.css">
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
 <body>
 <section>
@@ -114,52 +114,54 @@
     </nav>
 </section>
 
-<div class="login-container">
-    <h3>Đăng ký với</h3>
-    <div class="social-buttons">
-        <button class="btn-social">
-            <img src="http://pluspng.com/img-png/google-logo-png-google-logo-icon-png-transparent-background-1000.png"
-                 alt="Google" style="width: 20px; height: 20px;">
-            &nbsp;Google
-        </button>
-        <button class="btn-social">
-            <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png"
-                 alt="Zalo" style="width: 20px; height: 20px;">
-            &nbsp;Zalo
-        </button>
-    </div>
-    <div class="divider">hoặc</div>
-    <form>
-        <div class="field">
-            <input type="text" id="user-name" placeholder="Nhập họ và tên">
-            <label for="user-name">Họ và tên</label>
+<div class="container my-5">
+    <div class="login-container">
+        <h3>Đăng ký với</h3>
+        <div class="social-buttons">
+            <button class="btn-social">
+                <img src="http://pluspng.com/img-png/google-logo-png-google-logo-icon-png-transparent-background-1000.png"
+                     alt="Google" style="width: 20px; height: 20px;">
+                &nbsp;Google
+            </button>
+            <button class="btn-social">
+                <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-in-colors/2500/zalo-seeklogo.com-512.png"
+                     alt="Zalo" style="width: 20px; height: 20px;">
+                &nbsp;Zalo
+            </button>
         </div>
-        <div class="field">
-            <input type="text" id="user-number" placeholder="Nhập số điện thoại">
-            <label for="user-number">Số điện thoại</label>
-        </div>
-        <div class="field">
-            <input type="text" id="user-mail" placeholder="Nhập email (không bắt buộc)">
-            <label for="user-mail">Số điện thoại</label>
-        </div>
-        <div class="field">
-            <input type="text" id="user-birthday" placeholder="Ngày sinh">
-            <label for="user-birthday">Ngày sinh</label>
-        </div>
-        <div class="field">
-            <input type="password" id="user-password" placeholder="Nhập mật khẩu">
-            <label for="user-password">Mật khẩu</label>
-        </div>
-        <div class="field">
-            <input type="password" id="user-confirm-password" placeholder="Nhập lại mật khẩu">
-            <label for="user-confirm-password">Nhập lại mật khẩu</label>
-        </div>
+        <div class="divider">hoặc</div>
+        <form>
+            <div class="field">
+                <input type="text" id="user-name" placeholder="Nhập họ và tên">
+                <label for="user-name">Họ và tên</label>
+            </div>
+            <div class="field">
+                <input type="text" id="user-number" placeholder="Nhập số điện thoại">
+                <label for="user-number">Số điện thoại</label>
+            </div>
+            <div class="field">
+                <input type="text" id="user-mail" placeholder="Nhập email (không bắt buộc)">
+                <label for="user-mail">Số điện thoại</label>
+            </div>
+            <div class="field">
+                <input type="text" id="user-birthday" placeholder="Ngày sinh">
+                <label for="user-birthday">Ngày sinh</label>
+            </div>
+            <div class="field">
+                <input type="password" id="user-password" placeholder="Nhập mật khẩu">
+                <label for="user-password">Mật khẩu</label>
+            </div>
+            <div class="field">
+                <input type="password" id="user-confirm-password" placeholder="Nhập lại mật khẩu">
+                <label for="user-confirm-password">Nhập lại mật khẩu</label>
+            </div>
 
-        <button type="submit" class="btn-login" id="register-btn">Đăng ký</button>
-    </form>
+            <button type="submit" class="btn-login" id="register-btn">Đăng ký</button>
+        </form>
 
-    <div class="footer-links">
-        <p>Ban đã có tài khoản? <a href="login.html" class="text-link">Đăng nhập ngay</a></p>
+        <div class="footer-links">
+            <p>Ban đã có tài khoản? <a href="login.html" class="text-link">Đăng nhập ngay</a></p>
+        </div>
     </div>
 </div>
 
