--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Drum Store</title>
-    <link rel="icon" href="assets/images/logo.png" type="image/png">
+    <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="/assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/custom.css">
     <style>
         .dropdown-submenu {
             position: relative;
@@ -161,109 +161,108 @@
 </head>
 
 <body>
-<header>
+<header class="fixed-top">
     <!-- Banner Image -->
     <img src="/assets/images/banners/banner_header.png" alt="Tháng Tri Ân Săn Sale"
          class="img-fluid w-100">
+
     <!-- Top Info -->
+    <section>
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+            <div class="container">
+                <!-- Logo -->
+                <a class="navbar-brand" href="#">
+                    <img src="/assets/images/logo.png" alt="Logo" style="height: 60px;width: auto">
+                </a>
 
-</header>
-<section>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <div class="container">
-            <!-- Logo -->
-            <a class="navbar-brand" href="#">
-                <img src="assets/images/logo.png" alt="Logo" style="height: 60px;width: auto">
-            </a>
+                <!-- Navbar toggler cho thiết bị nhỏ -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <!-- Navbar toggler cho thiết bị nhỏ -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <!-- Các liên kết và thanh tìm kiếm -->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <!-- Links ở giữa -->
+                    <div class="navbar-nav mx-auto fw-bold">
+                        <a class="nav-link" href="/pages/home.html">TRANG CHỦ</a>
+                        <a class="nav-link" href="/pages/about.html">GIỚI THIỆU</a>
 
-            <!-- Các liên kết và thanh tìm kiếm -->
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- Links ở giữa -->
-                <div class="navbar-nav mx-auto fw-bold">
-                    <a class="nav-link" href="#home">TRANG CHỦ</a>
-                    <a class="nav-link" href="pages/about.html">GIỚI THIỆU</a>
+                        <!-- Dropdown cho SẢN PHẨM -->
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                SẢN PHẨM
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li class="dropdown-submenu">
+                                    <a class="dropdown-item dropdown-toggle" href="#">Trống</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Trống điện tử</a></li>
+                                        <li><a class="dropdown-item" href="#">Trống cơ</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown-submenu">
+                                    <a class="dropdown-item dropdown-toggle" href="#">Phụ kiện</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Giá đỡ trống</a></li>
+                                        <li><a class="dropdown-item" href="#">Gậy trống</a></li>
+                                        <li><a class="dropdown-item" href="#">Túi đựng trống</a></li>
+                                    </ul>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Âm thanh</a></li>
+                                <li><a class="dropdown-item" href="#">Dụng cụ tập luyện</a></li>
+                            </ul>
+                        </div>
 
-                    <!-- Dropdown cho SẢN PHẨM -->
-                    <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            SẢN PHẨM
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li class="dropdown-submenu">
-                                <a class="dropdown-item dropdown-toggle" href="#">Trống</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Trống điện tử</a></li>
-                                    <li><a class="dropdown-item" href="#">Trống cơ</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-submenu">
-                                <a class="dropdown-item dropdown-toggle" href="#">Phụ kiện</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Giá đỡ trống</a></li>
-                                    <li><a class="dropdown-item" href="#">Gậy trống</a></li>
-                                    <li><a class="dropdown-item" href="#">Túi đựng trống</a></li>
-                                </ul>
-                            </li>
-                            <li><a class="dropdown-item" href="#">Âm thanh</a></li>
-                            <li><a class="dropdown-item" href="#">Dụng cụ tập luyện</a></li>
-                        </ul>
+                        <a class="nav-link" href="/pages/posts/posts.html">TIN TỨC</a>
+                        <a class="nav-link" href="/pages/contact.html">LIÊN HỆ</a>
                     </div>
 
-                    <a class="nav-link" href="#">TIN TỨC</a>
-                    <a class="nav-link" href="#">LIÊN HỆ</a>
-                    <a class="nav-link" href="#">CHI NHÁNH</a>
-                </div>
+                    <!-- Thanh tìm kiếm trên thiết bị lớn -->
+                    <form class="d-flex mt-3 mt-lg-0 me-3">
+                        <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search">
+                        <button class="btn btn-dark" type="submit">Tìm</button>
+                    </form>
 
-                <!-- Thanh tìm kiếm trên thiết bị lớn -->
-                <form class="d-flex mt-3 mt-lg-0 me-3">
-                    <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search">
-                    <button class="btn btn-dark" type="submit">Tìm</button>
-                </form>
-
-                <!-- Icon Đăng nhập và Giỏ hàng -->
-                <div class="d-flex align-items-center ms-auto order-lg-2">
-                    <!-- ms-auto để đưa sang phải trên màn hình lớn -->
-                    <!-- Giỏ hàng -->
-                    <a href="#" class="btn btn-light me-3 position-relative">
-                        <i class="bi bi-cart-fill"></i>
-                        <!-- Badge hiển thị số lượng sản phẩm trong giỏ hàng -->
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                    <!-- Icon Đăng nhập và Giỏ hàng -->
+                    <div class="d-flex align-items-center ms-auto order-lg-2">
+                        <!-- ms-auto để đưa sang phải trên màn hình lớn -->
+                        <!-- Giỏ hàng -->
+                        <a href="#" class="btn btn-light me-3 position-relative">
+                            <i class="bi bi-cart-fill"></i>
+                            <!-- Badge hiển thị số lượng sản phẩm trong giỏ hàng -->
+                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                     3 <!-- số lượng sản phẩm -->
                     </span>
-                    </a>
+                        </a>
 
-                    <!-- Đăng nhập -->
-                    <div class="dropdown">
-                        <button class="btn btn-light dropdown-toggle" type="button" id="accountDropdown"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-person-circle"></i>
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
-                            <li><a class="dropdown-item" href="#">Đăng nhập</a></li>
-                            <li><a class="dropdown-item" href="#">Đăng ký</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Tài khoản của tôi</a></li>
-                            <li><a class="dropdown-item" href="#">Đơn hàng</a></li>
-                            <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
-                        </ul>
+                        <!-- Đăng nhập -->
+                        <div class="dropdown">
+                            <button class="btn btn-light dropdown-toggle" type="button" id="accountDropdown"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-person-circle"></i>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
+                                <li><a class="dropdown-item" href="/pages/account/login.html">Đăng nhập</a></li>
+                                <li><a class="dropdown-item" href="/pages/account/register.html">Đăng ký</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="/pages/account/my-account.html">Tài khoản của tôi</a>
+                                </li>
+                                <li><a class="dropdown-item" href="/pages/account/orders.html">Đơn hàng</a></li>
+                                <li><a class="dropdown-item" href="/pages/account/logout.html">Đăng xuất</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </nav>
-
-
-    <!-- Carousel -->
+        </nav>
+    </section>
+</header>
+<main>
     <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators" id="carouselIndicators"></div>
         <div class="carousel-inner" id="carouselItems"></div>
@@ -365,12 +364,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="assets/images/about/about.jpg" class="img-fluid rounded shadow" alt="About Us">
+                    <img src="/assets/images/about/about.jpg" class="img-fluid rounded shadow" alt="About Us">
                 </div>
                 <div class="col-md-6">
                     <h2 class="mb-4">VỀ CHÚNG TÔI</h2>
                     <p>Drum Store tự hào là đơn vị hàng đầu trong lĩnh vực cung cấp nhạc cụ trống tại Việt Nam. Với hơn
-                        10 năm kinh nghiệm, chúng tôi cam kết mang đến những sản phẩm chất lượng nhất từ các thương hiệu
+                        20 năm kinh nghiệm, chúng tôi cam kết mang đến những sản phẩm chất lượng nhất từ các thương hiệu
                         uy tín trên thế giới.</p>
                     <ul class="list-unstyled">
                         <li class="mb-2">✓ 100% sản phẩm chính hãng</li>
@@ -382,12 +381,9 @@
             </div>
         </div>
     </section>
+</main>
 
-
-</section>
 <footer>
-
-
     <!--Contact-->
     <div class="bg-secondary py-5">
         <div class="container text-black">
@@ -451,13 +447,18 @@
                 <div class="col-12 col-md-3 mb-4 mb-md-0">
                     <h5 class="text-uppercase">Hỗ trợ khách hàng</h5>
                     <ul class="list-unstyled">
-                        <li><strong>Gọi mua hàng: </strong><a href="tel:123-456-7890" class="text-white">123-456-7890
-                            (Miễn
-                            phí)</a></li>
-                        <li><strong>Khiếu nại, Bảo hành: </strong><a href="tel:123-456-7890" class="text-white">123-456-7890</a>
+                        <li>
+                            <strong>Gọi mua hàng: </strong>
+                            <a href="tel:123-456-7890" class="text-white">123-456-7890 (Miễn phí)</a>
+                        </li>
+                        <li>
+                            <strong>Khiếu nại, Bảo hành: </strong>
+                            <a href="tel:123-456-7890" class="text-white">123-456-7890</a>
                         </li>
                         <li><strong>Thời gian phục vụ: </strong>8h-22h</li>
-                        <li><strong>Email: </strong><a href="mailto:drumstore@gmail.com" class="text-white">drumstore@gmail.com</a>
+                        <li>
+                            <strong>Email: </strong>
+                            <a href="mailto:drumstore@gmail.com" class="text-white">drumstore@gmail.com</a>
                         </li>
                     </ul>
                 </div>
@@ -475,14 +476,14 @@
 
                     <h5 class="text-uppercase mt-4">Phương thức thanh toán</h5>
                     <ul class="list-unstyled">
-                        <li><img src="assets/images/payments/visa.png" alt="Phương thức thanh toán" class="img-fluid"/>
+                        <li><img src="/assets/images/payments/visa.png" alt="Phương thức thanh toán" class="img-fluid"/>
                         </li>
                     </ul>
 
                     <h5 class="text-uppercase mt-4">Chứng nhận</h5>
                     <ul class="list-unstyled">
-                        <li><img src="assets/images/dcma/chungnhan.png" alt="Chứng nhận" class="img-fluid"/></li>
-                        <li><img src="assets/images/dcma/dmca.png" alt="Chứng nhận" class="img-fluid"/></li>
+                        <li><img src="/assets/images/dcma/chungnhan.png" alt="Chứng nhận" class="img-fluid"/></li>
+                        <li><img src="/assets/images/dcma/dmca.png" alt="Chứng nhận" class="img-fluid"/></li>
                     </ul>
                 </div>
             </div>
@@ -495,11 +496,11 @@
         </div>
     </div>
 </footer>
-<script src="assets/libraries/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/libraries/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 <script>
     document.querySelectorAll('.dropdown-submenu > a').forEach(function (element) {
         element.addEventListener('click', function (e) {
-            var nextDropdown = this.nextElementSibling;
+            let nextDropdown = this.nextElementSibling;
             if (nextDropdown && nextDropdown.classList.contains('dropdown-menu')) {
                 e.preventDefault();  // Ngăn chặn hành động mặc định (click)
                 nextDropdown.classList.toggle('show');  // Tạo hiệu ứng mở/đóng menu
