--- a/pages/account/orders.html
+++ b/pages/account/orders.html
@@ -236,7 +236,7 @@
             align-items: center;
             justify-content: center;
             border-radius: 50%;
-        }       
+        }
     </style>
 </head>
 
@@ -356,18 +356,70 @@
                             <h5 href="" class="card-title text-center">Xin chào <strong>Nguyễn Hữu Nam</strong></h5>
                         </div>
                         <ul class="list-group list-group-flush">
-                            <a href="my-account.html" class="list-group-item active"><i
-                                    class="bi bi-person-circle me-2"></i> Thông tin tài khoản</a>
-                            <a href="#" class="list-group-item"><i class="bi bi-file-earmark-text me-2"></i> Quản lý đơn
+                            <a href="my-account.html" class="list-group-item "><i class="bi bi-person-circle me-2"></i>
+                                Thông tin tài khoản</a>
+                            <a href="#" class="list-group-item active"><i class="bi bi-file-earmark-text me-2"></i> Quản
+                                lý đơn
                                 hàng</a>
                             <a href="addresses.html" class="list-group-item"><i class="bi bi-geo-alt me-2"></i> Danh
                                 sách địa chỉ</a>
-                            <a href="logout.html" class="list-group-item"><i class="bi bi-box-arrow-right me-2"></i> Đăng xuất</a>
+                            <a href="logout.html" class="list-group-item"><i class="bi bi-box-arrow-right me-2"></i>
+                                Đăng xuất</a>
                         </ul>
                     </div>
                 </div>
+                <div class="col-md-9">
+                    <h3 class="mb-4">Danh sách đơn hàng</h3>
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-hover">
+                            <thead class="table-primary">
+                                <tr>
+                                    <th>Mã đơn hàng</th>
+                                    <th>Ngày đặt</th>
+                                    <th>Trạng thái</th>
+                                    <th>Tổng tiền</th>
+                                    <th>Hành động</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>#ORD001</td>
+                                    <td>19/11/2024</td>
+                                    <td><span class="badge bg-success">Hoàn thành</span></td>
+                                    <td>1.200.000đ</td>
+                                    <td>
+                                        <a href="order-details.html?id=ORD001" class="btn btn-sm btn-primary">Chi
+                                            tiết</a>
+                                        <button class="btn btn-sm btn-danger">Hủy</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>#ORD002</td>
+                                    <td>18/11/2024</td>
+                                    <td><span class="badge bg-warning">Đang xử lý</span></td>
+                                    <td>850.000đ</td>
+                                    <td>
+                                        <a href="order-details.html?id=ORD002" class="btn btn-sm btn-primary">Chi
+                                            tiết</a>
+                                        <button class="btn btn-sm btn-danger">Hủy</button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>#ORD002</td>
+                                    <td>10/11/2024</td>
+                                    <td><span class="badge bg-danger">Đã hủy</span></td>
+                                    <td>550.000đ</td>
+                                    <td>
+                                        <a href="order-details.html?id=ORD002" class="btn btn-sm btn-primary">Chi
+                                            tiết</a>
+                                        <button class="btn btn-sm btn-danger">Hủy</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
-                
             </div>
         </div>
     </main>
