--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -142,11 +142,11 @@
                     <img src="https://i.pinimg.com/originals/c0/91/be/c091befb0af3d0268d82d68fcfe146f1.jpg" alt="phil">
                     <div class="product-information">
                         <div class="product-detail">
-                            <p class="product-name" id="product-name">Radiohead's Drumer Philip James Selway (born 23 May 1967)</p>
+                            <p class="product-name">Radiohead's Drumer Philip James Selway (born 23 May 1967)</p>
                             <p class="product-price"><strong>Giá:</strong> 290.000 VND</p>
                             <div class="product-option">
                                 <div class="option">
-                                    <p>Size</p>
+                                    <strong>Size</strong>
                                     <div class="dropdown">
                                         <button class="dropdown-toggle" id="dropdownMenuButton" type="button" data-bs-toggle="dropdown" aria-expanded="false">M</button>
                                         <ul class="dropdown-menu p-3" aria-labelledby="dropdownMenuButton">
@@ -159,7 +159,7 @@
                                     </div>
                                 </div>
                                 <div class="option">
-                                    <p>Quantity</p>
+                                    <strong>Số lượng</strong>
                                     <div class="quantity-container">
                                         <div id="decreaseBtn" class="quantity-button">-</div>
                                         <input type="text" id="quantityInput" class="quantity-input" value="1" readonly>
@@ -171,18 +171,51 @@
 
                         <div class="product-detail2">
                             <p class="product-price">290.000VND</p>
-                            <p class="product-status">status</p>
-                            <button class="favorite-button"><img src="/assets/images/icon/heart.png" alt="Thêm vào danh sách ưa thích"></button>
-                            <button class="delete-button"><img src="/assets/images/icon/trash_bin.png" alt="Xóa sản phẩm"></button>
+                            <p class="product-status">còn hàng</p>
+                            <button class="favorite-button"></button>
+                            <button class="delete-button"></button>
                         </div>
                     </div>
-
-
                 </div>
                 <div class="product-divider"></div>
                 <div class="product">
                     <img src="https://i.pinimg.com/originals/c0/91/be/c091befb0af3d0268d82d68fcfe146f1.jpg" alt="phil">
+                    <div class="product-information">
+                        <div class="product-detail">
+                            <p class="product-name" id="product-name">Radiohead's Drumer Philip James Selway (born 23 May 1967)</p>
+                            <p class="product-price"><strong>Giá:</strong> 290.000 VND</p>
+                            <div class="product-option">
+                                <div class="option">
+                                    <strong>Size</strong>
+                                    <div class="dropdown">
+                                        <button class="dropdown-toggle" id="dropdownMenuButton1" type="button" data-bs-toggle="dropdown" aria-expanded="false">M</button>
+                                        <ul class="dropdown-menu p-3" aria-labelledby="dropdownMenuButton">
+                                            <li><a class="dropdown-item" href="#" data-size="S">S</a></li>
+                                            <li><a class="dropdown-item" href="#" data-size="M">M</a></li>
+                                            <li><a class="dropdown-item" href="#" data-size="L">L</a></li>
+                                            <li><a class="dropdown-item" href="#" data-size="XL">XL</a></li>
+                                            <li><a class="dropdown-item" href="#" data-size="XXL">XXL</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="option">
+                                    <strong>Số lượng</strong>
+                                    <div class="quantity-container">
+                                        <div id="decreaseBtn1" class="quantity-button">-</div>
+                                        <input type="text" id="quantityInput1" class="quantity-input" value="1" readonly>
+                                        <div id="increaseBtn1" class="quantity-button">+</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div class="product-detail2">
+                            <p class="product-price">290.000VND</p>
+                            <p class="product-status">còn hàng</p>
+                            <button class="favorite-button"></button>
+                            <button class="delete-button"></button>
+                        </div>
+                    </div>
                 </div>
                 <div class="divider"></div>
             </div>
